--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,10 +3,10 @@
   width: 250px;
   height: 162px;
   border-radius: 20px;
-  background:transparent url("./assets/avatar.jpg") center top no-repeat;
+  background:transparent url("../images/avatar.jpg") center top no-repeat;
   background-size: 100%;
 }
 
 .img-acu:hover {
-  background-image: url("./assets/secondAvatar.png");
+  background-image: url("../images/avatar.png");
 }
