--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -966,7 +966,7 @@
   
   /* Credits */
   .credits {
-    text-align: right;
+    text-align: center;
     padding: 0.5em;
     line-height: 1em;
     opacity: 0.75;
@@ -1004,8 +1004,9 @@
     margin-bottom: 50vh;
   }
   footer {
-    height: 50vh;
-    position: fixed;
+    height: auto;
+    position: relative;
+    padding: 1em;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -1014,6 +1015,9 @@
     align-items: center;
     justify-content: center;
     z-index: 1;
+  }
+  .footer:hover {
+    opacity: 1;
   }
   @media only screen and (max-width: 767px) {
     header {
